<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/brouser" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/ic_calcul"
            android:title="@string/calculate" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_accel"
            android:icon="@drawable/ic_menu_accel"
            android:title="@string/menu_accel" />

        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_audio"
            android:title="@string/menu_audio" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_history_sett"
            android:icon="@drawable/ic_menu_history_sett"
            android:title="@string/menu_history_sett" />


    </group>
</menu>